--- a/Project_part3_code.ipynb
+++ b/Project_part3_code.ipynb
@@ -287,7 +287,7 @@
         "                x = bn1(x)       \n",
         "                x = layer2(x)\n",
         "                x = bn2(x)\n",
-        "                strategy = keras.layers.Dense(2,activation='elu',name = 'strategy' + str(j))(x)\n",
+        "                strategy = keras.layers.Dense(2,activation='elu',kernel_initializer=initializers,name = 'strategy' + str(j))(x)\n",
         "\n",
         "                if j == 0:\n",
         "                    \n",
